# dbus-python-client-gen

./: .gitignore  .isort.cfg  .packit.yaml  .travis.yml  CHANGES.txt  Makefile  README.rst  check.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  weekly.yml
data/: org.freedesktop.DBus.Introspectable.xml  org.freedesktop.DBus.ObjectManager.xml  org.storage.stratis1.Manager.xml
src/dbus_python_client_gen/: __init__.py  _errors.py  _gmoreaders.py  _invokers.py  _managed_objects_readers.py  _version.py
tests/: test_generated.py  test_introspect.py  test_invoke.py  test_properties.py
tests/data/: fake.storage.stratis1.Manager.xml  org.freedesktop.DBus.Properties.xml
