[metadata]
name = dbus-python-client-gen
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/stratis-storage/dbus-python-client-gen
description = transforms values into properly wrapped dbus-python objects
license = MPL-2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: dbus_python_client_gen._version.__version__
platforms =
    Linux
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    dbus-python
    into-dbus-python>=0.8

package_dir =
    =src

[options.packages.find]
where=src
